# stockbot

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  PROJECT.md  README.md  SKILL.md  agent_state.json  agent_worker.py  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  railway.worker.toml  requirements.txt  super_agents_manifesto.txt  superagent_v1.md
.claude/: settings.json
.github/workflows/: deploy.yml  live-snapshot.yml  merge-command.yml  pr-triage.yml  watchdog.yml
api/: email.js
backups/2026-07-22/: diagnostics.json  ensemble.json  health.json  integrity.json  lgbm_ic_0.1860.json  news-risk.json  profit_suggestions.json  trades.json  trades_full.json  universe.json  watchdog.json
config/: ffsa_features.json  live.yaml  paper.yaml  universe.json
docs/: ROADMAP.md  claude.md  model_improvement_brief.md  pipeline_b.md  project.md  quant_rnd_routine.json  skill.md  skills.md  strategy.md
frontend/: App.jsx  index.html  package-lock.json  vite.config.js
legacy/api/: send-email.js
legacy/src/: App.jsx
mobile/: app.json  eas.json  metro.config.js  package-lock.json  package.json
mobile/app/: _layout.js
models/lgbm/: lgbm_ic_-0.0179.json  lgbm_ic_-0.0179.pkl  lgbm_ic_-0.0630.json  lgbm_ic_-0.0630.pkl  lgbm_ic_0.1067.json  (+7 more)
reports/: quant_research_2026_05_26.md  rl_backtest_AAPL.json
scripts/: ab_report.py  backfill.py  build_features.py  cleanup_db.py  daily_performance.py  forecast_sndk.py  research_backtest.py  research_variants.py  run_ffsa.py  run_full_pipeline.sh  save_reference_distributions.py  test_pipeline_b_steps.py  test_pipeline_health.py  test_signal_scan.py  test_trade_roundtrip.py  train_lgbm.py  train_models.py  train_rl.py
snapshot/: diagnostics.json  health.json  integrity.json  meta.json  trades.json  watchdog.json
src/: App.jsx  config.py  dashboard_page.py  track_page.py
(+133 files in other folders)
